# CudaNN

./: CMakeLists.txt  README.md  main.cpp  main.cu  test.mod
UI/: mainwindow.cpp  mainwindow.h
lib/: CudaFunctions.cu  CudaFunctions.cuh  Matrix.cu  Matrix.cuh  NNCore.cu  NNCore.cuh  Vector.cu  Vector.cuh
